[tool.poetry]
name = "didactic"
version = "0.1.0"
description = "Deep manIfolD leArning CharacTerization In eChocardiography (DIDACTIC) project"
authors = ["Nathan Painchaud <nathan.painchaud@usherbrooke.ca>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/creatis-myriad/didactic"
classifiers=[
    "Environment :: Console",
    "Natural Language :: English",
    # Pick your license as you wish
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "~3.10.6"
torch = { version = "~2.0.0", source = "pytorch-cu118" }
torchvision = { version = "~0.15.1", source = "pytorch-cu118" }
pytorch-lightning = "~2.0.0"
rtdl-revisiting-models = "~0.0.2"
hydra-core = "~1.3.0"
hydra-joblib-launcher = "*"
holoviews = { version = "*", extras = ["recommended"] }
numba = "~0.57.1"   # as to be manually pinned to avoid resolver picking a too old version w/o pre-build llvmlite dep
numpy = "*"
pandas = "*"
torchmetrics = "*"
PyYAML = "*"
matplotlib = "*"
pacmap = "*"
comet-ml = "*"
vital = { path = "./vital/", develop = true }

# XTab packages (which use the AutoGluon framework)
# They're commented out because
# 1) Poetry is not able to recognize the package name because the "_" between "autogluon" and submodule names are in fact escaped "."
#"autogluon_common" = { path = "./XTab/autogluon/common/", develop = true }
#"autogluon_core" = { path = "./XTab/autogluon/core/", develop = true }
#"autogluon_features" = { path = "./XTab/autogluon/features/", develop = true }
#"autogluon_multimodal" = { path = "./XTab/autogluon/multimodal/", develop = true }

# Dependencies required by XTab submodule
# Because I only managed to install XTab packages manually using pip with the "no-deps" flag, their aggregated dependencies
# are listed here, to maximize the amount of packages in the environment still managed using poetry
nlpaug = "*"
text-unidecode = "*"
nptyping = "<2.0"
boto3 = "*"
timm = "*"
nltk = "*"
transformers = "*"
pytorch-metric-learning = "*"
evaluate = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
isort = "==5.12.0"
black = "==23.3.0"
flake8 = "==6.0.0"
flake8-docstrings = "==1.7.0"

[tool.poetry.scripts]
didactic-runner = "didactic.runner:main"

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.black]
line-length = 120
exclude = "(.eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv|.svn|_build|buck-out|build|dist)"

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["didactic"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
